--- a/views/header.html
+++ b/views/header.html
@@ -9,9 +9,7 @@
     <!-- import our CSS for header of our site -->
     <link rel="stylesheet" href="../static/css/header.css" type="text/css"/>
 </head>
-
 <body>
-
 <div>
     <div class="row mx-auto background-green">
         <div class="col-4" align="center"><img src="../static/img/montagna.png" class="img-responsive"></div>
@@ -26,7 +24,7 @@
                     <li>
                         <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
                     <li>
-                        <button onclick="window.open('searchPath')" type="submit" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
+                        <button type="submit" onclick="location.href = '/searchPath';" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
                     <li>
                         <button type="submit" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
                     <li>
@@ -38,15 +36,13 @@
                 <ul class="nav navbar background-orange">
                     <li>
                         <button type="submit" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
-                            <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
+                        <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
                         </button>
                     <li>
                 </ul>
             </div>
         </div>
     </form>
-</div>
-
+    </div>
 </body>
 </html>
-
