--- a/views/searchPath.html
+++ b/views/searchPath.html
@@ -81,6 +81,9 @@
         <div class="container" id="resultsContainer">
 
           <div class="row justify-content-center" style="padding-top:10%">No matches found</div>
+          {{range $val := .paths}}
+          <a class="dropdown-item" href="#">{{$val}}</a>
+          {{end}}
           <!--<div class="container">
             <button type="submit" class="btn" name="path" value="<%=bean.getName()%>" style="min-width: 100%;">
               <div class="row card-view-simple-path rounded">
