Lista mountain path frontend

--- a/frontend/views/searchPath.html
+++ b/frontend/views/searchPath.html
@@ -79,21 +79,23 @@
       <!-- search results -->
       <form class="form" method="post">
         <div class="container" id="resultsContainer">
+          <div id=results class="row justify-content-center" style="padding-top:10%"></div>
+          <script> if (paths.length === 0){
+            document.getElementById("results").style.display = "No matches found"
+          }</script>
 
-          <div class="row justify-content-center" style="padding-top:10%">No matches found</div>
           {{range $val := .paths}}
-          <a class="dropdown-item" href="#">{{$val}}</a>
-          {{end}}
-          <!--<div class="container">
-            <button type="submit" class="btn" name="path" value="<%=bean.getName()%>" style="min-width: 100%;">
+
+          <div class="container">
+            <button type="submit" class="btn" name="path" value={{$val.Name}} style="min-width: 100%;">
               <div class="row card-view-simple-path rounded">
                 <div class="col align-items-center">
                   <div class="row justify-content-center" style="padding-bottom: 1%; padding-top:1%">
                     <div class="d-flex justify-content-start align-items-center">
                       <div class="ml-auto w-100 p-2 bd-highlight">
-                        <div class="path-name-font" id="pathNameCardView" align="left" style="padding-left: 5%;"><%=bean.getName()%></div>
+                        <div class="path-name-font" id="pathNameCardView" align="left" style="padding-left: 5%;">{{$val.Name}}</div>
                       </div>
-                      <div class="mr-auto p-2 bd-highlight" style="padding-left: 5%;">
+                     <!-- <div class="mr-auto p-2 bd-highlight" style="padding-left: 5%;">
                         <div class="d-flex justify-content-start align-items-center">
                           <div class="p-2 flex-item-stars-2">
                             <img src="../static/img/star.png" class="icon-star">
@@ -102,36 +104,33 @@
                             <img src="../static/img/emptystar.png" class="icon-star">
                           </div>
                         </div>
-                      </div>
+                      </div>-->
 
                     </div>
-
                   </div>
                   <div class="row" style="padding-bottom: 2%;">
                     <div class="col-3" align="center" style="padding-bottom: 1%;">
                       <div class="row justify-content-center bold-text">Location</div>
-                      <div class="row justify-content-center"><%= bean.getRegionAsText()%></div>
-                      <div class="row justify-content-center"><%= bean.getProvinceAsText()%></div>
-                      <div class="row justify-content-center"><%= bean.getCityAsText()%></div>
+                      <div class="row justify-content-center">{{$val.Region}}</div>
+                      <div class="row justify-content-center">{{$val.Province}}</div>
+                      <div class="row justify-content-center">{{$val.City}}</div>
                     </div>
                     <div class="col-3" align="center">
                       <div class="row justify-content-center bold-text">Difficulty level</div>
-                      <div class="row justify-content-center" id="difficultyLevel"><%= bean.getLevelAsText() %></div>
+                      <div class="row justify-content-center" id="difficultyLevel">{{$val.Level}}</div>
                     </div>
-                    <div class="col-3" align="center">
-                      <div class="row justify-content-center bold-text">Travel Time</div>
-                      <div class="row justify-content-center"><%= bean.getHoursAsText() %>:<%= bean.getMinutesAsText() %></div>
-                    </div>
-                    <div class="col-3" align="center">
+                    <!--<div class="col-3" align="center">
                       <div class="row justify-content-center bold-text">Number of votes</div>
                       <div class="row justify-content-center"><%= bean.getNumberOfVotesAsText() %></div>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
               </div>
             </button>
-          </div>-->
+
+          </div>
         </div>
+        {{end}}
       </form>
     </div>
 
