--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -19,14 +19,13 @@
         <div class="col-4" align="center"><img src="../static/img/montagna_2.png" class="img-responsive"></div>
     </div>
 
-    <form class="form" method="post">
         <div class="row background-orange justify-content-between">
             <div class="col-10">
                 <ul class="nav navbar background-orange">
                     <li>
                         <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
                     <li>
-                        <button onclick="window.open('searchPath')" type="submit" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
+                        <button onclick="window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
                     <li>
                         <button type="submit" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
                     <li>
@@ -44,7 +43,6 @@
                 </ul>
             </div>
         </div>
-    </form>
 </div>
 
 </body>
