--- a/frontend/views/searchPath.html
+++ b/frontend/views/searchPath.html
@@ -20,14 +20,13 @@
       <div class="col-4" align="center"><img src="../static/img/montagna_2.png" class="img-responsive"></div>
     </div>
 
-    <form class="form" method="post">
       <div class="row background-orange justify-content-between">
         <div class="col-10">
           <ul class="nav navbar background-orange">
             <li>
               <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
             <li>
-              <button type="submit" onclick= "window.open('searchPath')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
+              <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
             <li>
               <button type="submit" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
             <li>
@@ -45,16 +44,15 @@
           </ul>
         </div>
       </div>
-    </form>
   </div>
 
   <div class="row fill">
     <div class="col-3 background-orange">
       <!-- form to insert path name to search -->
-      <form class="form-inline search-form" id="myForm" method="get">
+      <form class="form-inline search-form" id="myForm" method="post">
         <div class="d-flex">
           <input type="text" class="form-control" name="pathName" placeholder="Search for a path...">
-          <button type="submit" name="btnSearchPath" onclick= "window.open('searchPath')" class="btn btn-dark-orange"><img src="../static/img/icons8-search-52.png" width="50%"></button>
+          <button type="submit" name="btnSearchPath" class="btn btn-dark-orange"><img src="../static/img/icons8-search-52.png" width="50%"></button>
         </div>
       </form>
 
@@ -65,11 +63,9 @@
         </div>
         <div class="row mx-auto" style="padding-top: 5%;">
           <div class="col" align="center">
-            <form id="assistedResearchForm">
-              <button type="submit" onclick= "window.open('assistedResearch')" class="btn btn-ass-research" id="assistedResearch">
+              <button onclick= "window.open('assistedResearch','_self')" class="btn btn-ass-research" id="assistedResearch">
                 Assisted research
               </button>
-            </form>
           </div>
         </div>
       </div>
