--- a/frontend/views/viewPathInfo.html
+++ b/frontend/views/viewPathInfo.html
@@ -47,48 +47,41 @@
     </form>
 </div>
 
-{{/*<div class="row fill">
+<div class="row fill">
     <div class="col-3 background-orange">
-        <form class="form" action="viewMountainPathInfo.jsp" method="post">
-            <button type="submit" name="back" class="btn justify-content-start align-items-center" style="display: flex; justify-content: flex-start;"><img src="Images/back.png" width="35%"></button>
-        </form>
-        <%
-        if (path != null) {
-        %>
+        <button onclick="window.open('searchPath','_self')" name="back" class="btn justify-content-start align-items-center" style="display: flex; justify-content: flex-start;"><img src="../static/img/back.png" width="35%"></button>
+
         <div class="container">
             <div class="row mx-auto" style="padding-top: 6%;">
                 <div class="col-xs-1 center-block" align="center">
-                    <span class="path-name-font"><%=path.getName()%></span>
+                    <span class="path-name-font">{{.path.Name}}</span>
                 </div>
             </div>
             <div class="row mx-auto" style="padding-top: 15%;">
                 <div class="col-5" align="center">
-                    <%=path.getRegionAsText()%>
+                    {{.path.Region}}
                 </div>
                 <div class="col" align="center">-</div>
                 <div class="col-5" align="center">
-                    <%=path.getProvinceAsText()%>
+                    {{.path.Province}}
                 </div>
             </div>
             <div class="row mx-auto" style="padding-top: 5%;">
                 <div class="col" align="center">
-                    <%=path.getCityAsText()%>
+                    {{.path.City}}
                 </div>
             </div>
 
             <div class="d-flex justify-content-center align-items-center" style="padding-top: 15%;">
                 <div class="p-2 flex-item-photos">
-                    <% if (!base64.isEmpty()) { %>
-                    <img src="data:image/png;base64,<%=base64.get(0)%>" class="img-responsive photo">
-                    <% } else { %>
-                    <img src="Images/mountain_path.png" class="img-responsive photo">
-                    <% } %>
+{{/*                    <% if (!base64.isEmpty()) { %>*/}}
+{{/*                    <img src="data:image/png;base64,<%=base64.get(0)%>" class="img-responsive photo">*/}}
+{{/*                    <% } else { %>*/}}
+                    <img src="../static/img/mountain_path.png" class="img-responsive photo">
+{{/*                    <% } %>*/}}
                 </div>
             </div>
         </div>
-        <%
-        }
-        %>
     </div>
 
     <div class="col-9">
@@ -98,7 +91,7 @@
                     <br>
                     <div class="d-flex justify-content-start align-items-center">
                         <div class="p-2 flex-item-icon">
-                            <img src="Images/info.png" class="img-responsive icons">
+                            <img src="../static/img/info.png" class="img-responsive icons">
                         </div>
                         <div class="p-2 flex-item-text pull-left text">About the mountain path</div>
                     </div>
@@ -107,34 +100,34 @@
 
                     <div class="container">
                         <div class="row">
-                            <p class="green-text">Altitude&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getAltitudeAsText() %></span></p>
+                            <p class="green-text">Altitude&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Altitude}}</span></p>
                         </div>
-                        <div class="row">
+                        {{/*<div class="row">
                             <p class="green-text">Lenght&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLenghtAsText()%></span></p>
+                        </div>*/}}
+                        <div class="row">
+                            <p class="green-text">Level&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Level}}</span></p>
+                        </div>
+{{/*                        <div class="row">*/}}
+{{/*                            <p class="green-text">Landscape&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLandscapeAsText()%></span></p>*/}}
+{{/*                        </div>*/}}
+{{/*                        <div class="row">*/}}
+{{/*                            <p class="green-text">Ground&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getGroundAsText()%></span></p>*/}}
+{{/*                        </div>*/}}
+                        <div class="row">
+                            <p class="green-text">Cycleable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Cyclable}}</span></p>
                         </div>
                         <div class="row">
-                            <p class="green-text">Level&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLevelAsText()%></span></p>
+                            <p class="green-text">Presence of historical elements&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Historical}}</span></p>
                         </div>
                         <div class="row">
-                            <p class="green-text">Landscape&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLandscapeAsText()%></span></p>
+                            <p class="green-text">Family suitable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Family}}</span></p>
                         </div>
-                        <div class="row">
-                            <p class="green-text">Ground&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getGroundAsText()%></span></p>
-                        </div>
-                        <div class="row">
-                            <p class="green-text">Cycleable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getCyclableAsText()%></span></p>
-                        </div>
-                        <div class="row">
-                            <p class="green-text">Presence of historical elements&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getHistoricalElementsAsText()%></span></p>
-                        </div>
-                        <div class="row">
-                            <p class="green-text">Family suitable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getFamilySuitableAsText()%></span></p>
-                        </div>
-                        <div class="row">
-                            <p class="green-text">Travel Time&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">
-										<%=path.getHoursAsText()%> : <%=path.getMinutesAsText()%>
-									</span></p>
-                        </div>
+{{/*                        <div class="row">*/}}
+{{/*                            <p class="green-text">Travel Time&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">*/}}
+{{/*										<%=path.getHoursAsText()%> : <%=path.getMinutesAsText()%>*/}}
+{{/*									</span></p>*/}}
+{{/*                        </div>*/}}
                     </div>
                     <br>
                 </div>
@@ -144,16 +137,16 @@
                     <br>
 
                     <div class="container">
-                        <form class="form" action="viewMountainPathInfo.jsp" method="post">
+                        <form class="form" method="post">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="p-2 flex-item-link">
-                                    <img src="Images/google-maps.png" class="img-responsive">
+                                    <img src="../static/img/google-maps.png" class="img-responsive">
                                 </div>
                                 <div class="p-2 flex-item-link">
-                                    <img src="Images/apple-weather.png" class="img-responsive">
+                                    <img src="../static/img/apple-weather.png" class="img-responsive">
                                 </div>
                                 <div class="p-2" style="max-width: 30%; max-height: 30%;">
-                                    <button type="submit" class="btn" name="viewReviews" value="viewReviews"><img src="Images/list.png" class="img-responsive flex-item-link"></button>
+                                    <button type="submit" class="btn" name="viewReviews" value="viewReviews"><img src="../static/img/list.png" class="img-responsive flex-item-link"></button>
                                 </div>
                             </div>
                             <div class="row">
@@ -174,32 +167,32 @@
 
                     <div class="d-flex justify-content-start align-items-center">
                         <div class="p-2 flex-item-icon">
-                            <img src="Images/camera.png" class="img-responsive icons">
+                            <img src="../static/img/camera.png" class="img-responsive icons">
                         </div>
                         <div class="p-2 flex-item-text pull-left text">Photos</div>
                     </div>
 
-                    <form class="form-inline" action="viewMountainPathInfo.jsp" method="post">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="p-2 flex-item-arrow">
-                                <input type="image" name="prev" value="prev" src="Images/right-arrow.png" class="img-responsive rotate-180" ${ sessionScope.disablePrev eq true  ? 'style="display: none;"' : ''}>
-                            </div>
-                            <div class="p-2 flex-item-photos w-50 h-50">
-                                <% if (!base64.isEmpty()) { %>
-                                <img src="data:image/png;base64,<%=base64.get((int)session.getAttribute("currImgNum"))%>" class="img-responsive photo">
-                                <% } else { %>
-                                <img src="Images/mountain_path.png" class="img-responsive photo">
-                                <% } %>
-                            </div>
-                            <div class="p-2 flex-item-arrow">
-                                <input type="image" name="next" value="next" src="Images/right-arrow.png" class="img-responsive" ${ sessionScope.disableNext eq true  ? 'style="display: none;"' : ''}>
-                            </div>
-                        </div>
-                    </form>
+{{/*                    <form class="form-inline" action="viewMountainPathInfo.jsp" method="post">*/}}
+{{/*                        <div class="d-flex justify-content-between align-items-center">*/}}
+{{/*                            <div class="p-2 flex-item-arrow">*/}}
+{{/*                                <input type="image" name="prev" value="prev" src="Images/right-arrow.png" class="img-responsive rotate-180" ${ sessionScope.disablePrev eq true  ? 'style="display: none;"' : ''}>*/}}
+{{/*                            </div>*/}}
+{{/*                            <div class="p-2 flex-item-photos w-50 h-50">*/}}
+{{/*                                <% if (!base64.isEmpty()) { %>*/}}
+{{/*                                <img src="data:image/png;base64,<%=base64.get((int)session.getAttribute("currImgNum"))%>" class="img-responsive photo">*/}}
+{{/*                                <% } else { %>*/}}
+{{/*                                <img src="Images/mountain_path.png" class="img-responsive photo">*/}}
+{{/*                                <% } %>*/}}
+{{/*                            </div>*/}}
+{{/*                            <div class="p-2 flex-item-arrow">*/}}
+{{/*                                <input type="image" name="next" value="next" src="Images/right-arrow.png" class="img-responsive" ${ sessionScope.disableNext eq true  ? 'style="display: none;"' : ''}>*/}}
+{{/*                            </div>*/}}
+{{/*                        </div>*/}}
+{{/*                    </form>*/}}
 
                     <br><br>
 
-                    <div class="d-flex justify-content-start align-items-center">
+                    {{/*<div class="d-flex justify-content-start align-items-center">
                         <div class="p-2 flex-item-icon">
                             <img src="Images/filled-like.png" class="img-responsive icons">
                         </div>
@@ -221,8 +214,9 @@
                         }
                         %>
 
-                    </div>
+                    </div>*/}}
 
+{{/*
                     <div class="container" style="padding-left: 5%;">
                         <div class="row">
                             <p class="green-text">Number of votes&nbsp;
@@ -231,6 +225,7 @@
                         </div>
                     </div>
                 </div>
+*/}}
 
             </div>
 
@@ -238,7 +233,7 @@
         </div>
     </div>
 
-</div>*/}}
+</div>
 
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
