advanced search completato, minor fix

--- a/frontend/views/assistedResearch.html
+++ b/frontend/views/assistedResearch.html
@@ -91,11 +91,11 @@
             <div class="d-flex">
               <div class="col-3 black-text">Cycle path</div>
               <div class="form-check form-check-inline">
-                <input name="cycleble" type="radio" id="true" value="1">
+                <input name="cyclable" type="radio" id="true" value="1">
                 <label>Yes</label>
               </div>
               <div class="form-check form-check-inline">
-                <input name="cycleble" type="radio" id="false" value="-1">
+                <input name="cyclable" type="radio" id="false" value="-1">
                 <label>No</label>
               </div>
             </div>
