--- a/frontend/views/searchPath.html
+++ b/frontend/views/searchPath.html
@@ -14,38 +14,8 @@
 </head>
   <body>
   <div>
-    <div class="row mx-auto background-green">
-      <div class="col-4" align="center"><img src="../static/img/montagna.png" class="img-responsive"></div>
-      <div class="col-4" align="center"><img src="../static/img/Logo.png" class="img-responsive-logo"></div>
-      <div class="col-4" align="center"><img src="../static/img/montagna_2.png" class="img-responsive"></div>
-    </div>
 
-      <div class="row background-orange justify-content-between">
-        <div class="col-10">
-          <ul class="nav navbar background-orange">
-            <li>
-              <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
-            <li>
-              <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
-            <li>
-              <button type="submit" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
-            <li>
-              <button type="submit" name="ADD_PATH" value="ADD_VISIT" class="btn btn-primary btn-nav" style="background-color: #f69155">Schedule path visit</button>
-            </li>
-          </ul>
-        </div>
-        <div class="col-2">
-          <ul class="nav navbar background-orange">
-            <li>
-              <button type="submit" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
-                <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
-              </button>
-            <li>
-          </ul>
-        </div>
-      </div>
-  </div>
-
+  {{template "header.html"}}
   <div class="row fill">
     <div class="col-3 background-orange">
       <!-- form to insert path name to search -->
@@ -55,15 +25,28 @@
           <button type="submit" name="btnSearchPath" class="btn btn-dark-orange"><img src="../static/img/icons8-search-52.png" width="50%"></button>
         </div>
       </form>
-
+      <div class="container">
+        <div class="row mx-auto" style="padding-top: 5%; padding-left: 5%; padding-right: 5%">
+          <div class="col" align="center">or</div>
+        </div>
+        <form class="form" id="viewAll" method="post" style="padding-top: 5%;">
+          <div class="row mx-auto" style="padding-top: 5%;">
+            <div class="col" align="center">
+              <button type="submit" name="viewAll" value="view all" class="btn btn-dark-orange" id="view all">
+                View all
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
       <!-- text and assisted research button -->
       <div class="container">
-        <div class="row mx-auto" style="padding-top: 30%; padding-left: 5%; padding-right: 5%">
+        <div class="row mx-auto" style="padding-top: 20%; padding-left: 5%; padding-right: 5%">
           <div class="col" align="center">If you don't know what to look for we will help you!</div>
         </div>
         <div class="row mx-auto" style="padding-top: 5%;">
           <div class="col" align="center">
-              <button onclick= "window.open('assistedResearch','_self')" class="btn btn-ass-research" id="assistedResearch">
+              <button onclick= "window.open('assistedResearch','_self')" class="btn btn-dark-orange" id="assistedResearch">
                 Assisted research
               </button>
           </div>
