--- a/frontend/views/viewPathInfo.html
+++ b/frontend/views/viewPathInfo.html
@@ -13,39 +13,7 @@
 </head>
 <body>
 <div>
-    <div class="row mx-auto background-green">
-        <div class="col-4" align="center"><img src="../static/img/montagna.png" class="img-responsive"></div>
-        <div class="col-4" align="center"><img src="../static/img/Logo.png" class="img-responsive-logo"></div>
-        <div class="col-4" align="center"><img src="../static/img/montagna_2.png" class="img-responsive"></div>
-    </div>
-
-    <form class="form" method="post">
-        <div class="row background-orange justify-content-between">
-            <div class="col-10">
-                <ul class="nav navbar background-orange">
-                    <li>
-                        <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
-                    <li>
-                        <button type="submit" onclick= "window.open('searchPath')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
-                    <li>
-                        <button type="submit" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
-                    <li>
-                        <button type="submit" name="ADD_PATH" value="ADD_VISIT" class="btn btn-primary btn-nav" style="background-color: #f69155">Schedule path visit</button>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-2">
-                <ul class="nav navbar background-orange">
-                    <li>
-                        <button type="submit" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
-                            <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
-                        </button>
-                    <li>
-                </ul>
-            </div>
-        </div>
-    </form>
-</div>
+    {{template "header.html"}}
 
 <div class="row fill">
     <div class="col-3 background-orange">
