--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -34,7 +34,7 @@
         <div class="col-2">
             <ul class="nav navbar background-orange">
                 <li>
-                    <button type="submit" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
+                    <button onclick= "window.open('profile','_self')" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
                         <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
                     </button>
                 <li>
