--- a/frontend/views/profile.html
+++ b/frontend/views/profile.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="container" style="text-align: center; padding-top: 10%;">
-      <form class="form-inline" action="profile.jsp" method="post">
+      <form class="form-inline" method="post">
         <button type="submit" name="logOut" value="logOut" class="btn btn-dark-orange">Log out</button>
       </form>
     </div>
