--- a/frontend/views/profile.html
+++ b/frontend/views/profile.html
@@ -25,7 +25,7 @@
     </div>
     <div class="d-flex flex-row-reverse align-items-start">
       <div class="p-2">
-        <form class="form-inline" action="profile.jsp" method="post" enctype="multipart/form-data">
+        <form class="form-inline" method="post" enctype="multipart/form-data">
           <div class="p-2">
             <label class="custom-file-upload ">
               <input type="file" name="file" style="display: none;"/>
@@ -49,7 +49,7 @@
 
   <div class="col-9">
     <div class="container" style="padding-top: 2%;">
-      <form class="form-inline" action="profile.jsp" method="post">
+      <form class="form-inline" method="post">
         {{/*<%
         if (request.getParameter("save") != null) {
         try {
@@ -106,24 +106,25 @@
             <div class="row mx-auto" style="padding-bottom: 3%;">
               <div class="col-5 green-text">Name</div>
               <div class="col-7">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                <input type="text" class="form-control" id="name" name="name" value={{.user.Name}} placeholder="Name">
               </div>
             </div>
             <div class="row mx-auto" style="padding-bottom: 3%;">
               <div class="col-5 green-text">Surname</div>
               <div class="col-7">
-                <input type="text" class="form-control" id="surname" name="surname" placeholder="Surname">
+                <input type="text" class="form-control" id="surname" name="surname" value={{.user.Surname}} placeholder="Surname">
               </div>
             </div>
             <div class="row mx-auto" style="padding-bottom: 3%;">
               <div class="col-5 green-text">About me</div>
               <div class="col-7">
-                <textarea maxlength="200" rows="5" cols="25" name="description" placeholder="Write a description here...">
-{{/*                ${sessionScope.currentUser.description}*/}}
+                <textarea maxlength="200" rows="5" cols="25" id="description" name="description" placeholder="Write a description here...">
+                  {{.user.Description}}
                 </textarea>
               </div>
             </div>
           </div>
+
           {{/*<div class="col-6">
             <div class="d-flex justify-content-start align-items-center">
               <div class="p-2 flex-item-icon">
