--- a/frontend/views/viewPathInfo.html
+++ b/frontend/views/viewPathInfo.html
@@ -107,7 +107,7 @@
                         <form class="form" method="post">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="p-2 flex-item-link">
-                                    <img src="../static/img/google-maps.png" class="img-responsive">
+                                    <button type="submit" class="btn" name="addReview" value="addReview"><img src="../static/img/good-quality.png" class="img-responsive flex-item-link"></button>
                                 </div>
                                 <div class="p-2 flex-item-link">
                                     <img src="../static/img/apple-weather.png" class="img-responsive">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-4">
-                                    <div class="black-text" style="text-align: center;">View path on Google Maps</div>
+                                    <div class="black-text" style="text-align: center;">Add review</div>
                                 </div>
                                 <div class="col-4">
                                     <div class="black-text" style="text-align: center;">View weather forecast</div>
