weather forecast frontend

--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -23,7 +23,7 @@
                 <li>
                     <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
                 <li>
-                    <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path e view info</button>
+                    <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path</button>
                 <li>
                     <button onclick= "window.open('addPath','_self')" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
                 <li>
