--- a/frontend/views/viewPathInfo.html
+++ b/frontend/views/viewPathInfo.html
@@ -110,7 +110,8 @@
                                     <button type="submit" class="btn" name="addReview" value="addReview"><img src="../static/img/good-quality.png" class="img-responsive flex-item-link"></button>
                                 </div>
                                 <div class="p-2 flex-item-link">
-                                    <img src="../static/img/apple-weather.png" class="img-responsive">
+                                    <button type="submit" class="btn" name="viewForecast" value="viewForecast"><img src="../static/img/apple-weather.png" class="img-responsive"></button>
+
                                 </div>
                                 <div class="p-2" style="max-width: 30%; max-height: 30%;">
                                     <button type="submit" class="btn" name="viewReviews" value="viewReviews"><img src="../static/img/list.png" class="img-responsive flex-item-link"></button>
