--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -42,4 +42,7 @@
         </div>
     </div>
 </div>
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
