--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -21,7 +21,7 @@
         <div class="col-10">
             <ul class="nav navbar background-orange">
                 <li>
-                    <button type="submit" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
+                    <button onclick= "window.open('/','_self')" name="HOME" value="HOME" class="btn btn-primary btn-nav" style="background-color: #f69155">Home</button>
                 <li>
                     <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path</button>
                 <li>
