fix e completamento addNewVisit

--- a/frontend/views/addNewVisit.html
+++ b/frontend/views/addNewVisit.html
@@ -139,7 +139,7 @@
 
                             <div class="row mx-auto" style="padding-bottom: 3%;">
                                 <div class="col-3 green-text">Mountain path name</div>
-                                <div class="col-3"><input type="text" class="form-control" name="name" placeholder="{{.pathname.Name}}" disabled></div>
+                                <div class="col-3"><input type="text" class="form-control" name="name" value="{{.pathname.Name}}" disabled></div>
 {{/*                                <div class="col-2"><button type="submit" class="btn btn-light-orange">Verify</button></div>*/}}
                             </div>
 
