--- a/frontend/views/assistedResearch.html
+++ b/frontend/views/assistedResearch.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>PeakLand</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- import our CSS for header of our site -->
