--- a/frontend/views/addNewPath.html
+++ b/frontend/views/addNewPath.html
@@ -5,7 +5,8 @@
     <title>PeakLand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <!-- import our CSS for body of the page -->
     <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
 
@@ -225,7 +226,7 @@
                             </div>*/}}
                             <div class="container" style="text-align: center;">
                                 <input type="submit" name="savePath" value="Save path" class="btn btn-light-orange"/>
-                                <input type="submit" name="addReview" value="Add Review" class="btn btn-light-orange"/>
+{{/*                                <input type="submit" name="addReview" value="Add Review" class="btn btn-light-orange"/>*/}}
                             </div>
                         </form>
                         <br>
