--- a/frontend/views/addNewVisit.html
+++ b/frontend/views/addNewVisit.html
@@ -5,7 +5,8 @@
     <title>PeakLand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <!-- import our CSS for body of the page -->
     <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
 
