--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>PeakLand</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,13 +28,19 @@
                     <button onclick= "window.open('searchPath','_self')" name="VIEW_INFO" value="VIEW_INFO" class="btn btn-primary btn-nav" style="background-color: #f69155">Search path</button>
                 <li>
                     <button onclick= "window.open('addPath','_self')" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
-                <li>
-                    <button type="submit" name="ADD_VISIT" value="ADD_VISIT" class="btn btn-primary btn-nav" style="background-color: #f69155">Schedule path visit</button>
-                </li>
             </ul>
         </div>
         <div class="col-2">
             <ul class="nav navbar background-orange">
+                <li>
+                    <button onclick= "window.open('notifications','_self')" name="notifications" value="notifications" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
+                        {{if .newNotifications}}
+                        <img src="../static/img/promemoria.gif" style="max-height: 23px; max-width: 23px;" alt="">
+                        {{else}}
+                        <img src="../static/img/icons8-promemoria-appuntamenti-50.png" style="max-height: 23px; max-width: 23px;" alt="">
+                        {{end}}
+                    </button>
+                <li>
                 <li>
                     <button onclick= "window.open('profile','_self')" name="PROFILE" value="PROFILE" class="btn btn-primary btn-nav" style="float: right;" style="background-color: #f69155">
                         <img src="../static/img/icons8-male-user-64.png" style="max-height: 25%; max-width: 30%;">
