--- a/frontend/views/searchPath.html
+++ b/frontend/views/searchPath.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>PeakLand</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -12,8 +14,7 @@
   <!-- import our CSS for body of the page -->
   <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
 </head>
-  <body>
-  <div>
+<body>
 
   {{template "header.html"}}
   <div class="row fill">
@@ -56,25 +57,22 @@
 
     <div class="col-9">
       <!-- search results -->
-
+      <form class="form" method="post">
         <div class="container" id="resultsContainer">
           <div id=results class="row justify-content-center" style="padding-top:10%"></div>
-          <script> if (paths.length === 0){
-            document.getElementById("results").style.display = "No matches found"
-          }</script>
 
           {{range $val := .paths}}
 
           <div class="container">
-            <form class="form" method="post">
+
               <button type=submit class="btn" name="path" value={{$val.Name}} style="min-width: 100%;">
-              <div class="row card-view-simple-path rounded">
-                <div class="col align-items-center">
-                  <div class="row justify-content-center" style="padding-bottom: 1%; padding-top:1%">
-                    <div class="d-flex justify-content-start align-items-center">
-                      <div class="ml-auto w-100 p-2 bd-highlight">
-                        <div class="path-name-font" id="pathNameCardView" align="left" style="padding-left: 5%;">{{$val.Name}}</div>
-                      </div>
+                <div class="row card-view-simple-path rounded">
+                  <div class="col align-items-center">
+                    <div class="row justify-content-center" style="padding-bottom: 1%; padding-top:1%">
+                      <div class="d-flex justify-content-start align-items-center">
+                        <div class="ml-auto w-100 p-2 bd-highlight">
+                          <div class="path-name-font" id="pathNameCardView" align="left" style="padding-left: 5%;">{{$val.Name}}</div>
+                        </div>
                      <!-- <div class="mr-auto p-2 bd-highlight" style="padding-left: 5%;">
                         <div class="d-flex justify-content-start align-items-center">
                           <div class="p-2 flex-item-stars-2">
@@ -87,35 +85,36 @@
                       </div>-->
 
                     </div>
-                  </div>
-                  <div class="row" style="padding-bottom: 2%;">
-                    <div class="col-3" align="center" style="padding-bottom: 1%;">
-                      <div class="row justify-content-center bold-text">Location</div>
-                      <div class="row justify-content-center">{{$val.Region}}</div>
-                      <div class="row justify-content-center">{{$val.Province}}</div>
-                      <div class="row justify-content-center">{{$val.City}}</div>
                     </div>
-                    <div class="col-3" align="center">
-                      <div class="row justify-content-center bold-text">Difficulty level</div>
-                      <div class="row justify-content-center" id="difficultyLevel">{{$val.Level}}</div>
+                    <div class="row" style="padding-bottom: 2%;">
+                      <div class="col-3" align="center" style="padding-bottom: 1%;">
+                        <div class="row justify-content-center bold-text">Location</div>
+                        <div class="row justify-content-center">{{$val.Region}}</div>
+                        <div class="row justify-content-center">{{$val.Province}}</div>
+                        <div class="row justify-content-center">{{$val.City}}</div>
+                      </div>
+                      <div class="col-3" align="center">
+                        <div class="row justify-content-center bold-text">Difficulty level</div>
+                        <div class="row justify-content-center" id="difficultyLevel">{{$val.Level}}</div>
+                      </div>
+                      <!--<div class="col-3" align="center">
+                        <div class="row justify-content-center bold-text">Number of votes</div>
+                        <div class="row justify-content-center"><%= bean.getNumberOfVotesAsText() %></div>
+                      </div>-->
                     </div>
-                    <!--<div class="col-3" align="center">
-                      <div class="row justify-content-center bold-text">Number of votes</div>
-                      <div class="row justify-content-center"><%= bean.getNumberOfVotesAsText() %></div>
-                    </div>-->
                   </div>
                 </div>
-              </div>
-            </button>
-            </form>
+              </button>
           </div>
         </div>
         {{end}}
+      </form>
     </div>
 
   </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
 
+  </body>
 </html>
