aggiunta view di visualizzazione visite e dettaglio visita, fix vari file html, aggiunta dockerfile e docker compose per microservizio di notifica (da testare, io non riesco perché ho problemi con docker-compose per  microservizi java/spring)

--- a/frontend/views/header.html
+++ b/frontend/views/header.html
@@ -27,8 +27,8 @@
                 <li>
                     <button onclick= "window.open('addPath','_self')" name="ADD_PATH" value="ADD_PATH" class="btn btn-primary btn-nav" style="background-color: #f69155">Add new path</button>
                 <li>
-                    <button type="submit" name="ADD_VISIT" value="ADD_VISIT" class="btn btn-primary btn-nav" style="background-color: #f69155">Schedule path visit</button>
-                </li>
+                    <button onclick= "window.open('viewVisits','_self')" name="VIEW_VISITS" value="VIEW_VISITS" class="btn btn-primary btn-nav" style="background-color: #f69155">View your visits</button>
+                <li>
             </ul>
         </div>
         <div class="col-2">
