--- a/frontend/views/searchPath.html
+++ b/frontend/views/searchPath.html
@@ -1,121 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>PeakLand</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>PeakLand</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- import our CSS for header of our site -->
-  <link rel="stylesheet" href="../static/css/header.css" type="text/css"/>
+    <!-- import our CSS for header of our site -->
+    <link rel="stylesheet" href="../static/css/header.css" type="text/css"/>
 
-  <!-- import our CSS for body of the page -->
-  <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
+    <!-- import our CSS for body of the page -->
+    <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
 </head>
-  <body>
-  <div>
+<body>
+<div>
 
-  {{template "header.html"}}
-  <div class="row fill">
-    <div class="col-3 background-orange">
-      <!-- form to insert path name to search -->
-      <form class="form-inline search-form" id="myForm" method="post">
-        <div class="d-flex">
-          <input type="text" class="form-control" name="pathName" placeholder="Search for a path...">
-          <button type="submit" name="btnSearchPath" class="btn btn-dark-orange"><img src="../static/img/icons8-search-52.png" width="50%"></button>
-        </div>
-      </form>
-      <div class="container">
-        <div class="row mx-auto" style="padding-top: 5%; padding-left: 5%; padding-right: 5%">
-          <div class="col" align="center">or</div>
-        </div>
-        <form class="form" id="viewAll" method="post" style="padding-top: 5%;">
-          <div class="row mx-auto" style="padding-top: 5%;">
-            <div class="col" align="center">
-              <button type="submit" name="viewAll" value="view all" class="btn btn-dark-orange" id="view all">
-                View all
-              </button>
-            </div>
-          </div>
-        </form>
-      </div>
-      <!-- text and assisted research button -->
-      <div class="container">
-        <div class="row mx-auto" style="padding-top: 20%; padding-left: 5%; padding-right: 5%">
-          <div class="col" align="center">If you don't know what to look for we will help you!</div>
-        </div>
-        <div class="row mx-auto" style="padding-top: 5%;">
-          <div class="col" align="center">
-              <button onclick= "window.open('assistedResearch','_self')" class="btn btn-dark-orange" id="assistedResearch">
-                Assisted research
-              </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-9">
-      <!-- search results -->
-
-        <div class="container" id="resultsContainer">
-          <div id=results class="row justify-content-center" style="padding-top:10%"></div>
-          <script> if (paths.length === 0){
-            document.getElementById("results").style.display = "No matches found"
-          }</script>
-
-          {{range $val := .paths}}
-
-          <div class="container">
-            <form class="form" method="post">
-              <button type=submit class="btn" name="path" value={{$val.Name}} style="min-width: 100%;">
-              <div class="row card-view-simple-path rounded">
-                <div class="col align-items-center">
-                  <div class="row justify-content-center" style="padding-bottom: 1%; padding-top:1%">
-                    <div class="d-flex justify-content-start align-items-center">
-                      <div class="ml-auto w-100 p-2 bd-highlight">
-                        <div class="path-name-font" id="pathNameCardView" align="left" style="padding-left: 5%;">{{$val.Name}}</div>
-                      </div>
-                     <!-- <div class="mr-auto p-2 bd-highlight" style="padding-left: 5%;">
-                        <div class="d-flex justify-content-start align-items-center">
-                          <div class="p-2 flex-item-stars-2">
-                            <img src="../static/img/star.png" class="icon-star">
-                          </div>
-                          <div class="p-2 flex-item-stars-2">
-                            <img src="../static/img/emptystar.png" class="icon-star">
-                          </div>
-                        </div>
-                      </div>-->
-
-                    </div>
-                  </div>
-                  <div class="row" style="padding-bottom: 2%;">
-                    <div class="col-3" align="center" style="padding-bottom: 1%;">
-                      <div class="row justify-content-center bold-text">Location</div>
-                      <div class="row justify-content-center">{{$val.Region}}</div>
-                      <div class="row justify-content-center">{{$val.Province}}</div>
-                      <div class="row justify-content-center">{{$val.City}}</div>
-                    </div>
-                    <div class="col-3" align="center">
-                      <div class="row justify-content-center bold-text">Difficulty level</div>
-                      <div class="row justify-content-center" id="difficultyLevel">{{$val.Level}}</div>
-                    </div>
-                    <!--<div class="col-3" align="center">
-                      <div class="row justify-content-center bold-text">Number of votes</div>
-                      <div class="row justify-content-center"><%= bean.getNumberOfVotesAsText() %></div>
-                    </div>-->
-                  </div>
+    {{template "header.html"}}
+    <div class="row fill">
+        <div class="col-3 background-orange">
+            <!-- form to insert path name to search -->
+            <form class="form-inline search-form" id="myForm" method="post">
+                <div class="d-flex">
+                    <input type="text" class="form-control" name="pathName" placeholder="Search for a path...">
+                    <button type="submit" name="btnSearchPath" class="btn btn-dark-orange"><img
+                            src="../static/img/icons8-search-52.png" width="50%"></button>
                 </div>
-              </div>
-            </button>
             </form>
-          </div>
+            <div class="container">
+                <div class="row mx-auto" style="padding-top: 5%; padding-left: 5%; padding-right: 5%">
+                    <div class="col" align="center">or</div>
+                </div>
+                <form class="form" id="viewAll" method="post" style="padding-top: 5%;">
+                    <div class="row mx-auto" style="padding-top: 5%;">
+                        <div class="col" align="center">
+                            <button type="submit" name="viewAll" value="view all" class="btn btn-dark-orange"
+                                    id="view all">
+                                View all
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- text and assisted research button -->
+            <div class="container">
+                <div class="row mx-auto" style="padding-top: 20%; padding-left: 5%; padding-right: 5%">
+                    <div class="col" align="center">If you don't know what to look for we will help you!</div>
+                </div>
+                <div class="row mx-auto" style="padding-top: 5%;">
+                    <div class="col" align="center">
+                        <button onclick="window.open('assistedResearch','_self')" class="btn btn-dark-orange"
+                                id="assistedResearch">
+                            Assisted research
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        {{end}}
-    </div>
 
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+        <div class="col-9">
+            <!-- search results -->
+
+            <div class="container" id="resultsContainer">
+                <div id=results class="row justify-content-center" style="padding-top:10%"></div>
+                <script> if (paths.length === 0) {
+                    document.getElementById("results").style.display = "No matches found"
+                }</script>
+
+                {{range $val := .paths}}
+
+                <div class="container">
+                    <form class="form" method="post">
+                        <button type=submit class="btn" name="path" value={{$val.Name}} style="min-width: 100%;">
+                            <div class="row card-view-simple-path rounded">
+                                <div class="col align-items-center">
+                                    <div class="row justify-content-center" style="padding-bottom: 1%; padding-top:1%">
+                                        <div class="d-flex justify-content-start align-items-center">
+                                            <div class="ml-auto w-100 p-2 bd-highlight">
+                                                <div class="path-name-font" id="pathNameCardView" align="left"
+                                                     style="padding-left: 5%;">{{$val.Name}}
+                                                </div>
+                                            </div>
+                                            <!-- <div class="mr-auto p-2 bd-highlight" style="padding-left: 5%;">
+                                               <div class="d-flex justify-content-start align-items-center">
+                                                 <div class="p-2 flex-item-stars-2">
+                                                   <img src="../static/img/star.png" class="icon-star">
+                                                 </div>
+                                                 <div class="p-2 flex-item-stars-2">
+                                                   <img src="../static/img/emptystar.png" class="icon-star">
+                                                 </div>
+                                               </div>
+                                             </div>-->
+
+                                        </div>
+                                    </div>
+                                    <div class="row" style="padding-bottom: 2%;">
+                                        <div class="col-3" align="center" style="padding-bottom: 1%;">
+                                            <div class="row justify-content-center bold-text">Location</div>
+                                            <div class="row justify-content-center">{{$val.Region}}</div>
+                                            <div class="row justify-content-center">{{$val.Province}}</div>
+                                            <div class="row justify-content-center">{{$val.City}}</div>
+                                        </div>
+                                        <div class="col-3" align="center">
+                                            <div class="row justify-content-center bold-text">Difficulty level</div>
+                                            <div class="row justify-content-center" id="difficultyLevel">
+                                                {{$val.Level}}
+                                            </div>
+                                        </div>
+                                        <!--<div class="col-3" align="center">
+                                          <div class="row justify-content-center bold-text">Number of votes</div>
+                                          <div class="row justify-content-center"><%= bean.getNumberOfVotesAsText() %></div>
+                                        </div>-->
+                                    </div>
+                                </div>
+                            </div>
+                        </button>
+                    </form>
+                </div>
+                {{end}}
+            </div>
+        </div>
+
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
