--- a/frontend/views/viewVisitInfo.html
+++ b/frontend/views/viewVisitInfo.html
@@ -16,7 +16,7 @@
 
     <div class="row fill">
         <div class="col-3 background-orange">
-            <button onclick="window.open('searchPath','_self')" name="back"
+            <button onclick="window.open('viewVisits','_self')" name="back"
                     class="btn justify-content-start align-items-center"
                     style="display: flex; justify-content: flex-start;"><img src="../static/img/back.png" width="35%">
             </button>
