--- a/frontend/views/viewVisitInfo.html
+++ b/frontend/views/viewVisitInfo.html
@@ -125,11 +125,12 @@
                                             <input type=submit name="path" value="Invite" style="min-width: 100%;min-height: 100%"></input>
                                         </div>
                                     </div>
-                                    <div class="col-6" align="center" style="padding-bottom: 1%;">
-                                        {{.Phrase.Value}}
-                                    </div>
+
                                 </div>
                             </form>
+                            <div class="col-6" align="center" style="padding-bottom: 1%;">
+                                <label>{{.Phrase.Value}}</label>
+                            </div>
                             {{end}}
                         </div>
                     </div>
